# TEXT2SQL_RL_SPIDER

./: .gitignore  Makefile  README.md  debug_output.py  grpo_eval.py  local_smoke.py  pyproject.toml  spider_env.py  train_grpo.py
scripts/: run_a100_test.sh
