[project]
name = "text2sql-rl-spider"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "torch>=2.2.2",
    "tqdm>=4.68.4",
    "transformers>=5.13.0",
    "trl>=1.7.1",
    "wandb>=0.28.0",
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "gdown>=6.1.0",
]
