[project]
name = "text2sql-rl-spider"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.14.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "peft==0.19.1 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.6.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tqdm>=4.68.4",
    "transformers==5.13.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "trl==1.7.1 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "wandb>=0.28.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "gdown>=6.1.0",
]
